--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
     //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
