--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -15,12 +19,15 @@ spring:
       ddl-auto: update
     open-in-view: false
 
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-
   jackson:
     property-naming-strategy: SNAKE_CASE
 
   lifecycle:
     timeout-per-shutdown-phase: 20s
+
+jwt:
+  secret: ${JWT_SECRET_KEY}
+  exp:
+    refresh: ${JWT_EXP_REFRESH}
+    access: ${JWT_EXP_ACCESS}
+
